--- a/src/webapp/travel/style.css
+++ b/src/webapp/travel/style.css
@@ -45,6 +45,27 @@
     float: left;
     margin-left: 10px;
 }
+
+
+/*首页下照片墙*/
+#m_bo2{
+    width: 100%;
+    height: 800px;
+    margin: auto;
+    overflow: hidden;
+    background-image: url("photo/背景1.jpg");
+    background-size: cover;
+}
+#m_bot{
+    width: 250px;
+    height: 250px;
+    margin: 380px 700px;
+    overflow-y: scroll;
+    padding-right: 30px;
+    line-height: 24px;
+}
+
+
 /*正文头部*/
 #content_top{
     margin-left: 120px;
